--- a/index.html
+++ b/index.html
@@ -228,8 +228,10 @@
                 font-size: 0.98rem;
             }
             .skills-list {
-                flex-direction: column;
+                flex-direction: row !important;
+                flex-wrap: wrap;
                 gap: 8px;
+                justify-content: center;
             }
             .skill {
                 font-size: 0.95rem;
