--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             margin: 0;
             font-family: 'Montserrat', sans-serif;
-            background: linear-gradient(135deg, #232526, #414345);
+            background: linear-gradient(120deg, #232526 0%, #2c5364 100%);
             color: #fff;
         }
         header {
