--- a/index.html
+++ b/index.html
@@ -311,23 +311,18 @@ experience. Actively seeking a full-time developer role in a tech-forward organi
         <div class="projects">
             <div class="project-card">
                 <h3 style="color: #00e6e6;">Advanced Task Manager</h3>
-                <p>Developed and deployed a full-stack Task Manager application with task CRUD operations, priority
-filters, search functionality, and status tracking. Developed the frontend using React.js and the backend
-using Python with Flask, and implemented a dark/light mode toggle for enhanced user experience.</p>
+                <p>Built and deployed a full-stack Task Manager with task CRUD, search, priority filters, and status tracking. Implemented React.js frontend, Flask backend, and dark/light mode for better user experience.</p>
                 <a href="https://advancedtaskmanagerbyomkar2025.web.app/" target="_blank" class="live-link">View Live Project</a>
             </div>
             <div class="project-card">
                 <h3 style="color: #00e6e6;">Live Crypto Tracker</h3>
-                <p>Developed and Deployed a web application using React.js to display live cryptocurrency data through
-API integration. Implemented features to show coin names, symbols, icons, current prices, and
-historical high/low rates. The data is fetched using Axios for efficient and reliable API requests.
-integrated the CoinGecko API to fetch real-time cryptocurrency data.
+                <p>Developed and deployed a React.js web app integrating CoinGecko API to display live cryptocurrency data with coin details, prices, and historical high/low rates using Axios.
 </p>
                 <a href="https://omkar-react-cryptocurrencyapp.web.app/" target="_blank" class="live-link">View Live Project</a>
             </div>
             <div class="project-card">
                 <h3 style="color: #00e6e6;">Student Management System</h3>
-                <p>Weather dashboard using OpenWeatherMap API, built with vanilla JS and responsive design.</p>
+                <p>Built a Student Management System using Python and Django with full CRUD operations, including student and department management panels.</p>
                 <a href="https://studentmngtsystemdjangoomkar.pythonanywhere.com/ulogin" target="_blank" class="live-link">View Live Project</a>
             </div>
             <div class="project-card">
