--- a/index.html
+++ b/index.html
@@ -310,6 +310,11 @@ experience. Actively seeking a full-time developer role in a tech-forward organi
         <h2>Live Projects</h2>
         <div class="projects">
             <div class="project-card">
+                <h3 style="color: #00e6e6;">Early Landslide Detection, Notification and Rescue System</h3>
+                <p>Developed a landslide risk prediction system using historical data, featuring an admin panel for rescue shelters, real-time Google Maps navigation, and an embedded chatbot for safety queries.</p>
+                <a href="https://strokepredectionapplication.pythonanywhere.com/" target="_blank" class="live-link">View Live Project</a>
+            </div>
+            <div class="project-card">
                 <h3 style="color: #00e6e6;">Advanced Task Manager</h3>
                 <p>Built and deployed a full-stack Task Manager with task CRUD, search, priority filters, and status tracking. Implemented React.js frontend, Flask backend, and dark/light mode for better user experience.</p>
                 <a href="https://advancedtaskmanagerbyomkar2025.web.app/" target="_blank" class="live-link">View Live Project</a>
@@ -327,12 +332,12 @@ experience. Actively seeking a full-time developer role in a tech-forward organi
             </div>
             <div class="project-card">
                 <h3 style="color: #00e6e6;">Employee Management System</h3>
-                <p>Weather dashboard using OpenWeatherMap API, built with vanilla JS and responsive design.</p>
+                <p>Developed a full-stack web app with React.js, Express.js, and MySQL for CRUD operations via RESTful APIs, using Axios and React Hooks. Deployed on Firebase (frontend) and Render (backend)</p>
                 <a href="https://omkarkakademsmernstackproject.web.app/" target="_blank" class="live-link">View Live Project</a>
             </div>
             <div class="project-card">
                 <h3 style="color: #00e6e6;">Stroke Prediction</h3>
-                <p>Weather dashboard using OpenWeatherMap API, built with vanilla JS and responsive design.</p>
+                <p>Developed and deployed a stroke risk prediction web app using a machine learning classification model with Flask backend and a responsive HTML/CSS frontend for real-time health risk assessment.</p>
                 <a href="https://strokepredectionapplication.pythonanywhere.com/" target="_blank" class="live-link">View Live Project</a>
             </div>
             
