--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ experience. Actively seeking a full-time developer role in a tech-forward organi
             <div class="project-card">
                 <h3 style="color: #00e6e6;">Early Landslide Detection, Notification and Rescue System</h3>
                 <p>Developed a landslide risk prediction system using historical data, featuring an admin panel for rescue shelters, real-time Google Maps navigation, and an embedded chatbot for safety queries.</p>
-                <a href="https://strokepredectionapplication.pythonanywhere.com/" target="_blank" class="live-link">View Live Project</a>
+                <a href="https://terrasphere-mh.netlify.app/" target="_blank" class="live-link">View Live Project</a>
             </div>
             <div class="project-card">
                 <h3 style="color: #00e6e6;">Advanced Task Manager</h3>
