--- a/index.html
+++ b/index.html
@@ -396,6 +396,11 @@ experience. Actively seeking a full-time developer role in a tech-forward organi
 
         </form>
         <div id="formMessage" style="text-align:center;margin-top:16px;color:#00e6e6;font-weight:bold;"></div>
+        <div class="contact-links" style="text-align: center;">
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=kakadomkar03@gmail.com" target="_blank">Email</a>
+            <a href="https://github.com/omkarkakad" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/omkarkakad" target="_blank">LinkedIn</a>
+        </div>
     </div>
     <script>
 document.getElementById('contactForm').addEventListener('submit', async function(e) {
