--- a/index.html
+++ b/index.html
@@ -48,17 +48,57 @@
         .projects {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-            gap: 24px;
+            gap: 28px;
+            background: transparent;
+            padding: 0;
         }
         .project-card {
-            background: #2d2d2d;
-            border-radius: 12px;
-            padding: 20px;
-            box-shadow: 0 4px 16px rgba(0,0,0,0.15);
-            transition: transform 0.2s;
+            background: linear-gradient(135deg, #232526 60%, #0f2027 100%);
+            border-radius: 18px;
+            padding: 28px 22px 22px 22px;
+            box-shadow: 0 6px 32px rgba(0,0,0,0.25), 0 1.5px 0 #00e6e6 inset;
+            border: 1.5px solid #00e6e6;
+            transition: transform 0.18s, box-shadow 0.18s, border-color 0.18s;
+            color: #f8f8f8;
+            position: relative;
+        }
+        .project-card h3 {
+            color: #00e6e6;
+            margin-bottom: 10px;
+            font-size: 1.25rem;
+            letter-spacing: 1px;
+        }
+        .project-card p {
+            color: #e0e0e0;
+            margin-bottom: 18px;
+            font-size: 1rem;
+            line-height: 1.6;
+        }
+        .project-card .live-link {
+            color: #fff;
+            background: linear-gradient(90deg, #00e6e6 0%, #0072ff 100%);
+            padding: 8px 22px;
+            border-radius: 20px;
+            font-weight: bold;
+            text-decoration: none;
+            box-shadow: 0 2px 12px #00e6e655;
+            transition: background 0.2s, color 0.2s, box-shadow 0.2s;
+            font-size: 1rem;
+            border: none;
+            outline: none;
+            display: inline-block;
+        }
+        .project-card .live-link:hover {
+            background: linear-gradient(90deg, #0072ff 0%, #00e6e6 100%);
+            color: #232526;
+            box-shadow: 0 4px 20px #00e6e699;
+            text-decoration: none;
+            transform: scale(1.05);
         }
         .project-card:hover {
-            transform: translateY(-6px) scale(1.03);
+            transform: translateY(-8px) scale(1.025);
+            box-shadow: 0 12px 40px #00e6e655, 0 2px 0 #00e6e6 inset;
+            border-color: #0072ff;
         }
         .skills-list {
             display: flex;
