--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             position: relative;
         }
         .project-card h3 {
-            color: hsl(199, 100%, 4%);
+            color: #00e6e6;
             margin-bottom: 10px;
             font-size: 1.25rem;
             letter-spacing: 1px;
