--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             line-height: 1.6;
         }
         .project-card .live-link {
-            color: #fff;
+            color: #111;
             background: linear-gradient(90deg, #00e6e6 0%, #0072ff 100%);
             padding: 8px 22px;
             border-radius: 20px;
