--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             line-height: 1.6;
         }
         .project-card .live-link {
-            color: #111;
+            color: #fff;
             background: linear-gradient(90deg, #00e6e6 0%, #0072ff 100%);
             padding: 8px 22px;
             border-radius: 20px;
@@ -223,7 +223,7 @@
         }
 
         .live-link {
-            color: #00e6e6 !important;
+            color: #111 !important;
             font-weight: bold;
             text-decoration: underline;
             transition: color 0.2s;
