--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             box-shadow: 0 2px 12px #00e6e655;
         }
         .contact-links a {
-            color: #00e6e6;
+            color: #444;
             margin-right: 18px;
             text-decoration: none;
             font-size: 1.2rem;
@@ -432,7 +432,7 @@ experience. Actively seeking a full-time developer role in a tech-forward organi
 
         </form>
         <div id="formMessage" style="text-align:center;margin-top:16px;color:#00e6e6;font-weight:bold;"></div>
-        <div class="contact-links" style="text-align: center;color: #444;">
+        <div class="contact-links" style="text-align: center;">
             <a href="https://mail.google.com/mail/?view=cm&fs=1&to=kakadomkar03@gmail.com" target="_blank">Email</a>
             <a href="https://github.com/omkarkakad" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/omkarkakad" target="_blank">LinkedIn</a>
