--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             box-shadow: 0 2px 12px #00e6e655;
         }
         .contact-links a {
-            color: #444;
+            color: darkgray;
             margin-right: 18px;
             text-decoration: none;
             font-size: 1.2rem;
