--- a/index.html
+++ b/index.html
@@ -431,7 +431,9 @@ experience. Actively seeking a full-time developer role in a tech-forward organi
             <button type="submit" style="background:#00e6e6;color:#232526;padding:10px 24px;border:none;border-radius:20px;font-weight:bold;cursor:pointer;">Send</button>
 
         </form>
-        <div id="formMessage" style="text-align:center;margin-top:16px;color:#00e6e6;font-weight:bold;"></div></br>
+        <div id="formMessage" style="text-align:center;margin-top:16px;color:#00e6e6;font-weight:bold;"></div>
+        </br></br
+        <hr style="margin:32px 0; border:0;font-size:larger; border-top:1px solid #444;">>
         <div class="contact-links" style="text-align: center;">
             <a href="https://mail.google.com/mail/?view=cm&fs=1&to=kakadomkar03@gmail.com" target="_blank">Email</a>
             <a href="https://github.com/omkarkakad" target="_blank">GitHub</a>
