--- a/index.html
+++ b/index.html
@@ -325,16 +325,16 @@
     </header>
 
                 <div class="contact-icons" style="display:flex;justify-content:center;gap:24px;margin-top:20px;">
-    <a href="mailto:kakadomkar03@gmail.com" title="Email">
-        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/gmail.svg" alt="Gmail" style="width:36px;height:36px;filter:invert(0.7);">
-    </a>
-    <a href="https://github.com/omkarkakad" target="_blank" title="GitHub">
-        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg" alt="GitHub" style="width:36px;height:36px;filter:invert(0.7);">
-    </a>
-    <a href="https://www.linkedin.com/in/omkarkakad" target="_blank" title="LinkedIn">
-        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" alt="LinkedIn" style="width:36px;height:36px;filter:invert(0.7);">
-    </a>
-</div>
+                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=kakadomkar03@gmail.com" target="_blank" title="Email">
+                    <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/gmail.svg" alt="Gmail" style="width:36px;height:36px;filter:invert(0.7);">
+                </a>
+                <a href="https://github.com/omkarkakad" target="_blank" title="GitHub">
+                    <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg" alt="GitHub" style="width:36px;height:36px;filter:invert(0.7);">
+                </a>
+                <a href="https://www.linkedin.com/in/omkarkakad" target="_blank" title="LinkedIn">
+                    <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" alt="LinkedIn" style="width:36px;height:36px;filter:invert(0.7);">
+                </a>
+            </div>
 
     <div class="section" id="about">
         <h2>About Me</h2>
