--- a/index.html
+++ b/index.html
@@ -278,7 +278,13 @@
                 gap: 14px;
             }
             .project-card {
-                padding: 12px;
+                padding: 18px 10px 70px 10px; /* More bottom padding for button */
+                min-height: 220px;
+            }
+            .project-card .live-link {
+                left: 10px;
+                bottom: 16px;
+                max-width: calc(100% - 20px);
                 font-size: 0.98rem;
             }
             .skills-list {
