--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ experience. Actively seeking a full-time developer role in a tech-forward organi
         </form>
         <div id="formMessage" style="text-align:center;margin-top:16px;color:#00e6e6;font-weight:bold;"></div>
         </br></br
-        <hr style="margin:32px 0; border:0;font-size:larger; border-top:1px solid #444;">
+        <hr style="border: none; border-top: 1px solid #444; margin: 18px 0 12px 0;">
         <div class="contact-links" style="text-align: center;">
             <a href="https://mail.google.com/mail/?view=cm&fs=1&to=kakadomkar03@gmail.com" target="_blank">Email</a>
             <a href="https://github.com/omkarkakad" target="_blank">GitHub</a>
