--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
         }
         .contact-links a {
             color: darkgray;
+            font-weight: bold;
             margin-right: 18px;
             text-decoration: none;
             font-size: 1.2rem;
@@ -453,11 +454,13 @@ experience. Actively seeking a full-time developer role in a tech-forward organi
         </form>
         <div id="formMessage" style="text-align:center;margin-top:16px;color:#00e6e6;font-weight:bold;"></div>
         <hr style="border: none; border-top: 1px solid #444; margin: 18px 0 12px 0;">
+        <br><br>
         <div class="contact-links" style="text-align: center;">
             <a href="https://mail.google.com/mail/?view=cm&fs=1&to=kakadomkar03@gmail.com" target="_blank">Email</a>
             <a href="https://github.com/omkarkakad" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/omkarkakad" target="_blank">LinkedIn</a>
         </div>
+        <p style="text-align: center;margin-top: 16px;color: darkgray;font-weight: bold;">© 2025 Omkar Kakad. All rights reserved.</p>
     </div>
     <script>
 document.getElementById('contactForm').addEventListener('submit', async function(e) {
