--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Omkar's Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <style>
         body {
             margin: 0;
@@ -167,6 +168,34 @@
             background: #fff;
             color: #00e6e6;
         }
+        .navbar {
+            position: fixed;
+            top: 24px;
+            right: 36px;
+            z-index: 1000;
+            display: flex;
+            gap: 28px;
+            background: rgba(35,37,38,0.85);
+            border-radius: 32px;
+            padding: 10px 28px;
+            box-shadow: 0 2px 16px #0003;
+            align-items: center;
+        }
+        .navbar a {
+            color: #00e6e6;
+            font-size: 1.35rem;
+            text-decoration: none;
+            transition: color 0.2s, background 0.2s;
+            padding: 8px 12px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .navbar a:hover {
+            color: #fff;
+            background: #00e6e6;
+        }
         html {
             scroll-behavior: smooth;
         }
@@ -254,6 +283,18 @@
                 padding: 18px;
             }
         }
+        @media (max-width: 800px) {
+            .navbar {
+                top: 10px;
+                right: 10px;
+                padding: 6px 10px;
+                gap: 16px;
+            }
+            .navbar a {
+                font-size: 1.1rem;
+                padding: 6px 8px;
+            }
+        }
         @media (max-width: 600px) {
             header {
                 padding: 32px 8px 18px 8px;
@@ -336,7 +377,14 @@
     </style>
 </head>
 <body>
-    <header>
+    <!-- Navigation Bar -->
+    <nav class="navbar">
+        <a href="#home" title="Home"><i class="fas fa-home"></i></a>
+        <a href="#projects" title="Projects"><i class="fas fa-briefcase"></i></a>
+        <a href="#skills" title="Skills"><i class="fas fa-lightbulb"></i></a>
+        <a href="#contact" title="Contact"><i class="fas fa-envelope"></i></a>
+    </nav>
+    <header id="home">
         <img src="omkar.jpeg" alt="Omkar's Photo">
         <h1>Omkar Kakad</h1>
         <p>Full Stack Developer | Problem Solver | Tech Enthusiast</p>
