--- a/index.html
+++ b/index.html
@@ -294,10 +294,17 @@
             align-items: center;
             justify-content: center;
             cursor: pointer;
-            transition: background 0.2s, color 0.2s;
+            transition: background 0.2s, color 0.2s, transform 0.25s ease;
+            opacity: 0;
+            transform: scale(0.8);
+            visibility: hidden;
+        }
+        .mobile-nav-toggle.show {
+            opacity: 1;
+            transform: scale(1);
+            visibility: visible;
         }
         .mobile-navbar {
-            display: none;
             position: fixed;
             bottom: 90px;
             right: 24px;
@@ -309,7 +316,16 @@
             flex-direction: column;
             gap: 22px;
             align-items: center;
-            animation: fadeInMobileNav 0.2s;
+            opacity: 0;
+            transform: translateY(20px);
+            visibility: hidden;
+            transition: opacity 0.25s ease, transform 0.25s ease;
+        }
+        .mobile-navbar.show {
+            display: flex;
+            opacity: 1;
+            transform: translateY(0);
+            visibility: visible;
         }
         .mobile-navbar a {
             color: #00e6e6;
