--- a/index.html
+++ b/index.html
@@ -332,9 +332,9 @@
         }
         .tagline {
             font-family: "Montserrat", sans-serif;
-            font-weight: 600;
+            font-weight: bold;
             font-size: 1.5rem;
-            color: #222;
+            color: #fff;
             text-align: center;
             margin: 40px auto;
             line-height: 1.6;
@@ -350,7 +350,7 @@
             height: 1.6em; /* fixes height flicker */
             overflow: hidden;
             vertical-align: bottom;
-            color: #2575fc;
+            color: #c325fc;
         }
 
         .animated-text span {
