--- a/index.html
+++ b/index.html
@@ -332,9 +332,9 @@
         }
         .tagline {
             font-family: "Montserrat", sans-serif;
-            font-weight: bold;
+            font-weight: 600;
             font-size: 1.5rem;
-            color: #fff;
+            color: #222;
             text-align: center;
             margin: 40px auto;
             line-height: 1.6;
@@ -343,32 +343,17 @@
             flex-wrap: wrap;
         }
 
-        .animated-text {
-            display: inline-block;
-            margin-left: 8px;
-            position: relative;
-            height: 1.6em; /* fixes height flicker */
-            overflow: hidden;
-            vertical-align: bottom;
-            color: #c325fc;
+        /* Cursor effect */
+        .typing::after {
+            content: '|';
+            animation: blink 0.8s infinite;
+            margin-left: 2px;
+            color: #2575fc;
         }
 
-        .animated-text span {
-            display: block;
-            animation: rotateWords 8s linear infinite 0s;
-        }
-
-        /* Animation */
-        @keyframes rotateWords {
-            0% { transform: translateY(0%); }
-            20% { transform: translateY(0%); }
-            25% { transform: translateY(-100%); }
-            45% { transform: translateY(-100%); }
-            50% { transform: translateY(-200%); }
-            70% { transform: translateY(-200%); }
-            75% { transform: translateY(-300%); }
-            95% { transform: translateY(-300%); }
-            100% { transform: translateY(0%); }
+        @keyframes blink {
+            0%, 50% { opacity: 1; }
+            51%, 100% { opacity: 0; }
         }
 
         /* Responsive */
@@ -509,12 +494,7 @@
         <h1>Omkar Kakad</h1>
         <div class="tagline">
         Full Stack Developer | Tech Enthusiast | 
-        <span class="animated-text">
-        <span>Python</span>
-        <span>Java</span>
-        <span>JS MERN</span>
-        <span>Django</span>
-        </span>
+        <span class="typing"></span>
         </div>
         <a href="#contact" class="contact-btn">Contact Form</a>
         <a href="Omkar_Kakad_Resume.pdf" class="contact-btn" download style="margin-left: 12px;">Download Resume</a>
@@ -684,6 +664,38 @@ document.getElementById('contactForm').addEventListener('submit', async function
                 }
             }
         });
+
+        const roles = ["Python", "Java", "JS MERN", "AI/ML"];
+        const typingElement = document.querySelector(".typing");
+
+        let roleIndex = 0;
+        let charIndex = 0;
+        let isDeleting = false;
+        let speed = 120; // typing speed
+
+        function typeEffect() {
+        const currentRole = roles[roleIndex];
+        
+        if (isDeleting) {
+            typingElement.textContent = currentRole.substring(0, charIndex--);
+            speed = 80; // faster when deleting
+        } else {
+            typingElement.textContent = currentRole.substring(0, charIndex++);
+            speed = 120;
+        }
+
+        if (!isDeleting && charIndex === currentRole.length) {
+            speed = 1500; // wait before deleting
+            isDeleting = true;
+        } else if (isDeleting && charIndex === 0) {
+            isDeleting = false;
+            roleIndex = (roleIndex + 1) % roles.length;
+        }
+
+        setTimeout(typeEffect, speed);
+        }
+
+        typeEffect();
     </script>
 </body>
 </html>
