--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@
 
         /* Cursor effect */
         .cursor {
+            content: '|';
             display: inline-block;
             width: 2px;
             background-color: #2575fc;
