--- a/index.html
+++ b/index.html
@@ -497,8 +497,8 @@
         Full Stack Developer | Tech Enthusiast | 
         <span class="typing"></span>
         </div>
-        <a href="#contact" class="contact-btn">Contact Form</a>
-        <a href="Omkar_Kakad_Resume.pdf" class="contact-btn" download style="margin-left: 12px;">Download Resume</a>
+        <a href="#contact" class="live-link">Contact Form</a>
+        <a href="Omkar_Kakad_Resume.pdf" class="live-link" download style="margin-left: 12px;">Download Resume</a>
     </header>
 
                 <div class="contact-icons" style="display:flex;justify-content:center;gap:24px;margin-top:20px;">
