--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
             display: inline-block;
             margin-top: 24px;
             padding: 12px 32px;
-            background: #00e6e6;
-            color: #232526;
+            background: #232526;
+            color: #00e6e6;
             border: none;
             border-radius: 24px;
             font-size: 1.1rem;
@@ -166,7 +166,7 @@
         }
         .contact-btn:hover {
             background: #fff;
-            color: #00e6e6;
+            color: #232526;
         }
         .navbar {
             position: fixed;
@@ -497,8 +497,8 @@
         Full Stack Developer | Tech Enthusiast | 
         <span class="typing"></span>
         </div>
-        <a href="#contact" class="live-link">Contact Form</a>
-        <a href="Omkar_Kakad_Resume.pdf" class="live-link" download style="margin-left: 12px;">Download Resume</a>
+        <a href="#contact" class="contact-btn">Contact Form</a>
+        <a href="Omkar_Kakad_Resume.pdf" class="contact-btn" download style="margin-left: 12px;">Download Resume</a>
     </header>
 
                 <div class="contact-icons" style="display:flex;justify-content:center;gap:24px;margin-top:20px;">
