--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         }
 
         .contact-btn:hover {
-        color: #fff;
+        color: black;
         }
         .navbar {
             position: fixed;
