--- a/index.html
+++ b/index.html
@@ -156,38 +156,21 @@
         padding: 12px 32px;
         background: #232526;
         color: #00e6e6;
-        border: none;
+        border: 2px solid #00e6e6;
         border-radius: 24px;
         font-size: 1.1rem;
         font-weight: bold;
         text-decoration: none;
         cursor: pointer;
-        position: relative;
-        overflow: hidden;
-        transition: color 0.3s ease;
-        }
-
-        .contact-btn::before {
-        content: "";
-        position: absolute;
-        top: 0; left: -100%;
-        width: 100%; height: 100%;
-        background: linear-gradient(135deg, #00e6e6, #00ff99);
-        transition: all 0.4s ease;
-        z-index: 0;
-        }
-
-        .contact-btn:hover::before {
-        left: 0;
-        }
-
-        .contact-btn span {
-        position: relative;
-        z-index: 1;
+        transition: all 0.3s ease-in-out;
+        box-shadow: 0 0 0 transparent;
         }
 
         .contact-btn:hover {
-        color: black;
+        background: #00e6e6;
+        color: #232526;
+        box-shadow: 0 0 12px #00e6e6, 0 0 24px #00e6e6, 0 0 36px #00e6e6;
+        transform: scale(1.05);
         }
         .navbar {
             position: fixed;
