--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         .contact-btn:hover {
         background: #00e6e6;
         color: #232526;
-        box-shadow: 0 0 12px #00e6e6, 0 0 24px #00e6e6, 0 0 36px #00e6e6;
+        box-shadow: 0 0 12px #00e6e6, 0 0 24px  #0072ff, 0 0 36px #00e6e6;
         transform: scale(1.05);
         }
         .navbar {
