--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         display: inline-block;
         margin-top: 24px;
         padding: 12px 32px;
-        background: transparent;
+        background: #232526;
         color: #00e6e6;
         border: 2px solid #00e6e6;
         border-radius: 24px;
@@ -162,34 +162,16 @@
         font-weight: bold;
         text-decoration: none;
         cursor: pointer;
-        position: relative;
-        overflow: hidden;
-        transition: color 0.3s ease;
-        }
-
-        .contact-btn::before {
-        content: "";
-        position: absolute;
-        width: 100%; height: 100%;
-        top: 0; left: -100%;
-        background: #00e6e6;
-        transition: all 0.4s ease;
-        z-index: 0;
-        }
-
-        .contact-btn:hover::before {
-        left: 0;
-        }
-
-        .contact-btn span {
-        position: relative;
-        z-index: 1;
+        transition: all 0.3s ease-in-out;
+        box-shadow: 0 0 0 transparent;
         }
 
         .contact-btn:hover {
+        background: #00e6e6;
         color: #232526;
+        box-shadow: 0 0 12px #00e6e6, 0 0 24px  #0072ff, 0 0 36px #00e6e6;
+        transform: scale(1.05);
         }
-
         .navbar {
             position: fixed;
             top: 24px;
