--- a/index.html
+++ b/index.html
@@ -544,6 +544,7 @@ experience. Actively seeking a full-time developer role in a tech-forward organi
             <span class="skill">Express.js</span>
             <span class="skill">MongoDB</span>
             <span class="skill">Git</span>
+            <span class="skill">GitHub</span>
             <span class="skill">Java</span>
             <span class="skill">Version Control</span>
             <span class="skill">RESTful APIs</span>
