--- a/index.html
+++ b/index.html
@@ -533,6 +533,7 @@ experience. Actively seeking a full-time developer role in a tech-forward organi
         <div class="skills-list">
             <span class="skill">Python</span>
             <span class="skill">Django</span>
+            <span class="skill">Flask</span>
             <span class="skill">Machine Learning</span>
             <span class="skill">Natural Language Processing</span>
             <span class="skill">MySql</span>
